--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6"
   }
